5/8/16
-In options.cpp, need to create function default(), which sets up field size of 10 x 20
		-Need to create separate Field class
-Created field class with own display
-Main program can now call either options to ask for user options or just run default_field() function 
-Parsing in options() still doesn't really work; it's still set as dummy values

5/5/16
-Bare-bones design of main.cpp, options.cpp
-options.cpp asks user dimension of tetris field
-working on parsing string input to integers
	issues with istringstream not getting both values

Tasks:
-Allow for user to provide file and have program parse it